--- a/index.html
+++ b/index.html
@@ -61,24 +61,38 @@
             background-color: black;
             width:15px;
             height:70px;
-            margin-left:830px;
+            margin-left:840px;
 
         }
         .vamshi1{
             background-color: black;
             width:150px;
             height:70px;
-            margin-left:760px;
+            margin-left:770px;
 border: 2px solid ;
         }
+        h1{
+            color: brown;
+            text-align: center;
+            margin-top: 100px;
+        }
+       .aa:hover{
+        transform: scale(2.5,2.5);
+       }
+       .aaa:hover{
+        transform: scale(2.5,2.5);
+       }
+       .aaaa:hover{
+        transform: scale(2.5,2.5);
+       }
     </style>
 </head>
 <body>
-    <h1></h1>
+    <h1>Traffic lights</h1>
     <div class="sai">
-<div class="sai1"> <span>red</span></div>
-<div class="sai2"> <span>green</span></div>
-<div class="sai3"> <span>yellow</span></div>
+<div class="sai1"> <span class="aa">red</span></div>
+<div class="sai2"> <span class="aaa">green</span></div>
+<div class="sai3"> <span class="aaaa">yellow</span></div>
     </div>
     <div class="vamshi">
 
